src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>UID_Brand__c</fullName>
        <description>Brand of SKU</description>
        <formula>TEXT(PricebookEntry.Product2.UID_Brand__c)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Category__c</fullName>
        <description>Category of SKU</description>
        <formula>TEXT(PricebookEntry.Product2.UID_Category__c)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Customer_Group__c</fullName>
        <description>Category that Unilever uses to group customers</description>
        <label>Customer Group</label>
        <picklist>
            <picklistValues>
                <fullName>PI Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UID_Distributor_Value__c</fullName>
        <description>USD value of SKU</description>
        <formula>UID_Invoice_Value__c</formula>
        <label>Distributor Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UID_Invoice_Number__c</fullName>
        <formula>Order.UID_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Invoice_Value__c</fullName>
        <description>Invoice value of SKU</description>
        <label>Invoice Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UID_Material_ID__c</fullName>
        <formula>PricebookEntry.Product2.UID_Material_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Material_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Month__c</fullName>
        <description>Month of SKU sold</description>
        <formula>TEXT(Order.EffectiveDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Order_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order quantity of SKU sold</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UID_Purchase_Order__c</fullName>
        <description>Purchase order of SKU</description>
        <label>Purchase Order</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Sales_Date__c</fullName>
        <formula>TEXT(Month(Order.EffectiveDate)) &amp; &quot;-&quot; &amp; TEXT(Year(Order.EffectiveDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Sales_Flag__c</fullName>
        <description>Indicates whether order product is primary or secondary sales</description>
        <label>Sales Flag</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UID_Source__c</fullName>
        <description>Source of SKU</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>